# FiberTaskingLib

./: .clang-format  .clang-tidy  .ftl.DotSettings  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.asciidoc  LICENSE  LICENSE-THIRD-PARTY  Makefile  README.asciidoc  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: ci.yaml  commit.yaml  release.yaml  test.yaml
benchmarks/: CMakeLists.txt  main.cpp
benchmarks/empty/: empty.cpp  main.cpp
benchmarks/producer_consumer/: main.cpp  producer_consumer.cpp
benchmarks/synthetic/: fibonacci.cpp  mandelbrot.cpp
build_scripts/: linux_setup.sh  osx_setup.sh
ci_scripts/: linux_clang_setup.sh  linux_gcc_setup.sh  osx_clang_setup.sh  osx_gcc_setup.sh  travis_ci_install_linux.sh  travis_ci_install_osx.sh
cmake/: AddCompilerFlags.cmake  CheckAndAddFlag.cmake  Config.cmake  GTestAddTests.cmake  SetSourceGroup.cmake  config.h.cmake
documentation/: build_guide.asciidoc  code_style.asciidoc
examples/: CMakeLists.txt  triangle_num.cpp
include/fiber_tasking_lib/: atomic_counter.h  basic_linear_allocator.h  config.h  fiber.h  fiber_abstraction.h  global_args.h  portability.h  read_write_lock.h  tagged_heap.h  tagged_heap_backed_linear_allocator.h  task.h  task_scheduler.h  thread_abstraction.h  thread_safe_queue.h  tls_abstraction.h  typedefs.h  wait_free_queue.h
include/ftl/: alloc.h  assert.h  atomic_counter.h  base_counter.h  callbacks.h  config.h  fiber.h  fibtex.h  ftl_valgrind.h  parallel_for.h  task.h  task_counter.h  task_scheduler.h  thread_abstraction.h  thread_local.h  typedefs.h  wait_free_queue.h  wait_group.h
include/ftl/contrib/: trampoline.h
libs/EASTL/: CMakeLists.txt
libs/EASTL/include/EABase/: eabase.h
libs/EASTL/include/EABase/config/: eacompiler.h
libs/EASTL/include/EASTL/: allocator.h  core_allocator_adapter.h  fixed_allocator.h  fixed_hash_map.h  fixed_hash_set.h  fixed_list.h  fixed_vector.h  iterator.h  list.h  map.h  set.h  sort.h  string.h  type_traits.h  utility.h  vector.h
libs/EASTL/include/EASTL/bonus/: sort_extra.h
libs/EASTL/include/EASTL/internal/: config.h  fixed_pool.h  hashtable.h  type_compound.h  type_properties.h  type_transformations.h
libs/EASTL/src/: assert.cpp  fixed_pool.cpp  string.cpp
libs/gtest/lib/Win32/Debug/: gtestd.lib
libs/gtest/lib/Win32/Release/: gtest.lib
libs/gtest/lib/x64/Release/: gtest.lib
project_files/: CMakeLists.txt  ExampleProject.vcxproj  ExampleProject.vcxproj.filters  FiberTaskingLib-test.sln  FiberTaskingLib-test.vcxproj  FiberTaskingLib-test.vcxproj.filters  FiberTaskingLib.sln  FiberTaskingLib.vcxproj  FiberTaskingLib.vcxproj.filters
source/: CMakeLists.txt  alloc.cpp  atomic_counter.cpp  base_counter.cpp  contrib.cpp  fiber.cpp  fibtex.cpp  task_counter.cpp  task_scheduler.cpp  task_scheduler_internal.h  thread_abstraction.cpp  wait_group.cpp
source/asm/: jump_i386_ms_pe_masm.asm  jump_x86_64_sysv_macho_gas.S
source/asm/not_modified_yet/: jump_i386_ms_pe_gas.asm  make_i386_sysv_macho_gas.S
source/core/: task.h  task_scheduler.cpp
source/example_project/: CMakeLists.txt  eastl_defaults.cpp  main.cpp
source/fiber_tasking_lib/: CMakeLists.txt  basic_linear_allocator.cpp  basic_linear_allocator.h  config.h  fiber_abstraction.cpp  fiber_abstraction.h  global_args.h  linear_allocator.cpp  linear_allocator.h  memory.h  read_write_lock.cpp  read_write_lock.h  tagged_heap.cpp  tagged_heap.h  tagged_heap_backed_linear_allocator.cpp  tagged_heap_backed_linear_allocator.h  task_scheduler.cpp  task_scheduler.h  thread_abstraction.h  tls_abstraction.cpp  tls_abstraction.h  typedefs.h
source/fiber_tasking_lib_test/: main.cpp
source/memory/: basic_linear_allocator.cpp  tagged_heap.cpp  tagged_heap_backed_linear_allocator.cpp
source/util/: fiber_abstraction.cpp  read_write_lock.cpp  tls_abstraction.cpp
test/: CMakeLists.txt  calc_triangle_num.cpp  eastl_defaults.cpp  fiber_abstraction.cpp  maze.cpp  maze10x10.h  nested_fiber_switch.cpp  producer_consumer.cpp  single_fiber_switch.cpp  tls_abstraction.cpp
tests/: CMakeLists.txt  main.cpp
tests/common/: eastl_defaults.cpp
tests/contrib/: trampoline.cpp
tests/fiber_abstraction/: floating_point_fiber_switch.cpp  nested_fiber_switch.cpp  single_fiber_switch.cpp
tests/fibtex/: locking_tests.cpp
tests/functional/: calc_triangle_num.cpp  producer_consumer.cpp
tests/maze/: maze.cpp  maze10x10.h
tests/producer_consumer/: producer_consumer.cpp
tests/tls_abstraction/: tls_abstraction.cpp
tests/triangle_number/: calc_triangle_num.cpp
tests/utilities/: event_callbacks.cpp  fibtex.cpp  parallel_for.cpp  thread_local.cpp
tools/: clang-tidy-checks.txt  format.bash.in  format.sh  lint-clang.bash.in  lint-clang.sh  run-clang-tidy.py
